--- a/static/index.html
+++ b/static/index.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8" />
-</head>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
-<body>
-<div class="row">
-<form class="col s12">
-  <div class="row">
-	<div class="input-field col s6">
-	  <i class="material-icons prefix">mode_edit</i>
-	  <form method="POST" action="/paste">
-	    <textarea id="paste" name="paste" class="materialize-textarea" placeholder="bin something"></textarea>
-      </form>
-	</div>
-  </div>
-</form>
-</div>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+    </head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
+    <body>
+        <div class="row">
+            <form class="col s12">
+                <div class="row">
+                    <div class="input-field col s6">
+                        <!-- <form method="post" action="/paste"> -->
+                        <!--   <textarea id="paste-area" name="paste-area" class="materialize-textarea" placeholder="bin something"></textarea> -->
+                        <!-- <input type="submit" value="Submit"/> -->
+                        <!-- <!-1- <button class="btn btn-large waves-effect waves-light red" type="submit" name="submit">Submit</button> -1-> -->
+                        <!-- </form> -->
+                        <form action="/paste/" method="post">
+                            <input type="text" id="paste-area" name="paste-area"><br><br>
+                            <input type="submit" value="Submit">
+                        </form>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </body>
 </html>
