--- a/static/index.html
+++ b/static/index.html
@@ -1,25 +1,20 @@
-<!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8" />
     </head>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"/>
     <body>
-        <div class="row">
-            <form class="col s12">
-                <div class="row">
-                    <div class="input-field col s6">
-                        <!-- <form method="post" action="/paste"> -->
-                        <!--   <textarea id="paste-area" name="paste-area" class="materialize-textarea" placeholder="bin something"></textarea> -->
-                        <!-- <input type="submit" value="Submit"/> -->
-                        <!-- <!-1- <button class="btn btn-large waves-effect waves-light red" type="submit" name="submit">Submit</button> -1-> -->
-                        <!-- </form> -->
-                        <form action="/paste/" method="post">
-                            <input type="text" id="paste-area" name="paste-area"><br><br>
-                            <input type="submit" value="Submit">
-                        </form>
-                    </div>
-                </div>
+        <div class="center-align input-field row col s6">
+            <form method="post" action="/paste" class="input-field col s12">
+<!-- <textarea name="paste-area" placeholder="chipku something" class="materialize-textarea" autofocus autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false"></textarea> -->
+<textarea autocorrect="off" spellcheck="false" name="paste-area" placeholder="chipku something" class="materialize-textarea" ></textarea>
+                <!-- <input type="submit" value="submit"/> -->
+                 <!-- <a class="btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a> -->
+  <button class="btn waves-effect waves-light" type="submit" name="action">Submit
+    <i class="material-icons right">send</i>
+  </button>
             </form>
         </div>
     </body>
