--- a/static/index.html
+++ b/static/index.html
@@ -2,16 +2,60 @@
     <head>
         <meta charset="UTF-8" />
     </head>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"/>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/js/materialize.min.js" integrity="sha512-E9vR5BfN3bwSc45BWl95328hvOcBYjMzKAKgdNM59yQXpTC4glztZyVoFJRp5qPc5A95zUZ8D5N7kEwUtJ9f6w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
+<style>
+.container {
+    max-width: 1520px;;
+}
+
+.material-icons {
+    font-size: 32px;
+}
+
+.form-control {
+        display: block;
+        width: 100%;
+        border: 0px;
+        padding: .375rem .75rem;
+        font-size: 1rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #125eaa;
+}
+
+textarea {
+        margin: 13px;
+        height: 80%;
+        width: 100%;
+
+        background: none;
+        border: none;
+
+        resize: none;
+        overflow: auto;
+
+        color: blue;
+        font-family: consolas;
+        font-size: 1rem;
+        line-height: inherit;
+}
+
+body {
+    background-color: #dfdfdf0a;
+}
+</style>
     <body>
-        <div class="center-align input-field row col s10 pull-s1 m6 pull-m3 l4 pull-l4">
+        <!-- <h1 class="text-center">Chipku !</h1> -->
+        <div class="container">
             <form method="post" action="/paste" class="input-field col s12">
-                <textarea autocorrect="off" spellcheck="false" name="paste-area" placeholder="chipku something" class="materialize-textarea"></textarea>
-                <button class="btn waves-effect waves-light" type="submit" name="action">Submit
-                    <i class="material-icons right">send</i>
-                </button>
+                <textarea autocorrect="off" spellcheck="false" name="paste-area" placeholder="chipku something" class="form-control rounded-0"></textarea>
+                <div class="container">
+                  <button class="button" type="submit" name="action">
+                    <i class="material-icons">send</i>
+                  </button>
+                </div>
             </form>
         </div>
     </body>
