--- a/static/index.html
+++ b/static/index.html
@@ -2,59 +2,71 @@
     <head>
         <meta charset="UTF-8" />
     </head>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"></script>
-<style>
-.container {
-    max-width: 1520px;;
-}
+    <title>🚀 chipku 🚀</title>
+    <style>
+        .container {
+            max-width: 1520px;
+        }
 
-.material-icons {
-    font-size: 32px;
-}
+        .material-icons {
+            font-size: 40px;
+        }
 
-.form-control {
-        display: block;
-        width: 100%;
-        border: 0px;
-        padding: .375rem .75rem;
-        font-size: 1rem;
-        font-weight: 400;
-        line-height: 1.5;
-        color: #125eaa;
-}
+        .form-control {
+            display: block;
+            width: 100%;
+            border: 0px;
+            padding: 0.375rem 0.75rem;
+            background-color: #282828;
+            font-size: 1rem;
+            font-weight: 400;
+            line-height: 1.5;
+            color: #8e8e8e;
+        }
 
-textarea {
-        margin: 13px;
-        height: 80%;
-        width: 100%;
+        .form-control:focus {
+            color: #8e8e8e;
+            background-color: #282828;
+        }
 
-        background: none;
-        border: none;
+        textarea {
+            margin: 13px;
+            height: 80%;
+            width: 100%;
 
-        resize: none;
-        overflow: auto;
+            background: none;
+            border: none;
 
-        color: blue;
-        font-family: consolas;
-        font-size: 1rem;
-        line-height: inherit;
-}
+            resize: none;
+            overflow: auto;
 
-body {
-    background-color: #dfdfdf0a;
-}
-</style>
+            color: blue;
+            font-family: consolas;
+            font-size: 1rem;
+            line-height: inherit;
+        }
+
+        body {
+            background-color: #282828;
+        }
+
+        .btn {
+            color: #00ff34;
+            background-color: #8113a8;
+        }
+    </style>
     <body>
         <!-- <h1 class="text-center">Chipku !</h1> -->
         <div class="container">
             <form method="post" action="/paste" class="input-field col s12">
                 <textarea autocorrect="off" spellcheck="false" name="paste-area" placeholder="chipku something" class="form-control rounded-0"></textarea>
                 <div class="container">
-                  <button class="button" type="submit" name="action">
-                    <i class="material-icons">send</i>
-                  </button>
+                    <button class="btn pull-right" type="submit" name="action">
+                        <i class="material-icons">create</i>
+                    </button>
                 </div>
             </form>
         </div>
