Updates and fixes to css and main

--- a/static/index.html
+++ b/static/index.html
@@ -20,7 +20,7 @@
             width: 100%;
             border: 0px;
             padding: 0.375rem 0.75rem;
-            background-color: #282828;
+            background-color: #32302f;
             font-size: 1rem;
             font-weight: 400;
             line-height: 1.5;
@@ -29,7 +29,7 @@
 
         .form-control:focus {
             color: #8e8e8e;
-            background-color: #282828;
+            background-color: #32302f;
         }
 
         textarea {
@@ -50,7 +50,7 @@
         }
 
         body {
-            background-color: #282828;
+            background-color: #32302f;
         }
 
         .btn {
